@@ -1,3 +1,5 @@
+* Dialer: asterisk 1.6.2.x emits Dial event with changed property name. Account
+  for the difference in order to prevent access to undefined property.
 * Reports (Agent Information): behave properly when no queues have been defined.
 * Agent Console: protect private declaration of getParameter() in call 
   programming so that it does not conflict with Elastix 2 framework. Fixes
